syntax = "proto3";

import "google/protobuf/empty.proto";

package fr.unice.polytech.soa.team.j.bluegalacticx.rocket;

option java_multiple_files = true;
option java_package = "fr.unice.polytech.soa.team.j.bluegalacticx.rocket.proto";

service Rocket {
  rpc setReadyToLaunch(MissionRequest) returns (google.protobuf.Empty) {}
  rpc launchOrderRocket(LaunchOrderRequest) returns (LaunchOrderReply) {}
  rpc destructionOrderOnRocket(DestructionOrderRequest)
      returns (DesctructionOrderReply) {}
}

message MissionRequest {
  string rocketId = 1;
  string missionId = 2;
}

message LaunchOrderRequest {
  string rocketId = 1;
  bool launchRocket = 2;
}

message LaunchOrderReply { string reply = 1; }

message DestructionOrderRequest { string rocketId = 1; }

message DesctructionOrderReply { string destructionRocket = 1; }
